solved bug on contact -> used to break site on mobile

--- a/stylesheets/_config.scss
+++ b/stylesheets/_config.scss
@@ -11,7 +11,11 @@ $font2: "proxima-nova-condensed", sans-serif;
 * {
   scroll-behavior: smooth;
 }
-
+html{
+  margin: 0 !important;
+  padding: 0;
+  width: 100vw;
+}
 section {
   display: flex;
   position: relative;
