--- a/stylesheets/_contact.scss
+++ b/stylesheets/_contact.scss
@@ -44,7 +44,7 @@
 @media(max-width: 840px) {
   .contact-wrap {
     height: auto;
-    width: 400px;
+    width: 300px;
     padding: 80px 0;
   }
 
@@ -69,6 +69,7 @@
     }
 
     .contact {
-    margin-bottom: 60px;
+    margin-bottom: 50px;
+    margin-top: -50px;
   }
 }
