--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,6 +1,11 @@
 * {
   scroll-behavior: smooth; }
 
+html {
+  margin: 0 !important;
+  padding: 0;
+  width: 100vw; }
+
 section {
   display: flex;
   position: relative;
@@ -123,7 +128,7 @@ header {
 @media (max-width: 840px) {
   .contact-wrap {
     height: auto;
-    width: 400px;
+    width: 300px;
     padding: 80px 0; }
 
   .contact-item {
@@ -141,7 +146,8 @@ header {
     font-size: 32px; }
 
   .contact {
-    margin-bottom: 60px; } }
+    margin-bottom: 50px;
+    margin-top: -50px; } }
 footer {
   position: fixed;
   bottom: 0;
@@ -319,6 +325,9 @@ a:hover + span {
     bottom: 3em;
     right: 3.9em;
     text-align: center; }
+
+  .hero {
+    margin: 0 !important; }
 
   #hire-me {
     display: none; }
